--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,25 @@ footer {
     padding: 10px;
     margin-top: 20px;
       }
+header {
+    background-color: #222; /* خلفية داكنة */
+    color: #fff; /* لون النص أبيض */
+    padding: 15px 0;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 2rem;
+    margin: 0;
+}
+
+header nav a {
+    color: #fff;
+    margin: 0 15px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+header nav a:hover {
+    color: #f9a825; /* لون أصفر عند التمرير */
+}
